<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical">

    <TextView
        android:id="@+id/loginSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="@color/subtitleTextColour"
        android:textSize="@dimen/titleTextSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/registerTextMargin"
            android:layout_marginTop="@dimen/registerTextMargin"
            android:layout_marginEnd="@dimen/registerTextMargin"
            android:text="@string/emailAddress"
            android:textColor="@color/black"
            android:textSize="@dimen/registerTextSize" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/registerTextMargin"
            android:layout_marginEnd="@dimen/registerTextMargin"
            android:hint="@string/enterEmailHint"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/registerTextSize" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/registerTextMargin"
            android:layout_marginTop="@dimen/registerTextMargin"
            android:layout_marginEnd="@dimen/registerTextMargin"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="@dimen/registerTextSize" />


        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/registerTextMargin"
            android:layout_marginEnd="@dimen/registerTextMargin"
            android:hint="@string/enterPasswordHint"
            android:inputType="textPassword"
            android:textSize="@dimen/registerTextSize" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/registerTextMargin"
            android:text="@string/login"
            android:textSize="@dimen/registerTextSize" />

        <TextView
            android:id="@+id/registerLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/registerTextMargin"
            android:text="@string/registerLinkText"
            android:textSize="14dp" />

    </LinearLayout>

</LinearLayout>